各种尝试后，can死机的问题有所缓解，但还是存在，需要尝试新的方法了，考虑用网络传输

--- a/src/cnc-config/plc2cnc.ini
+++ b/src/cnc-config/plc2cnc.ini
@@ -9,6 +9,7 @@ VERSION = 1.1
 
 [DISPLAY]
 DISPLAY = axis
+#DISPLAY = tklinuxcnc
 EDITOR = gedit
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
