增加udp通信方式,基本调通

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,7 @@
 
 #DRIVER := ./driver/canalystII
-DRIVER := ./driver/tcp_driver
+#DRIVER := ./driver/tcp_driver
+DRIVER := ./driver/udp_driver
 
 .PHONY: all install clean
 
