--- a/src/cnc-config/plc2cnc.ini
+++ b/src/cnc-config/plc2cnc.ini
@@ -131,5 +131,5 @@ HOME_OFFSET = 0.0
 [APPLICATIONS]
 # delay required to wait for CANopen ready
 DELAY = 2
-APP = master-config.sh
+APP = master-config.sh plc2cnc.ini
 
