增加各轴限位及原点控制信号

--- a/src/cnc-config/plc2cnc.ini
+++ b/src/cnc-config/plc2cnc.ini
@@ -9,6 +9,7 @@ VERSION = 1.1
 
 [DISPLAY]
 DISPLAY = axis
+#DISPLAY = touchy
 #DISPLAY = tklinuxcnc
 EDITOR = gedit
 POSITION_OFFSET = RELATIVE
@@ -89,6 +90,8 @@ SCALE = 320.0
 FERROR = 1
 MIN_FERROR = .25
 HOME_OFFSET = 0.0
+HOME_SEARCH_VEL = 20.0
+HOME_LATCH_VEL  = 2.0
 
 [AXIS_Y]
 MAX_VELOCITY = 20.0
