--- a/src/cnc-config/plc2cnc.ini
+++ b/src/cnc-config/plc2cnc.ini
@@ -8,7 +8,8 @@ DEBUG = 0
 VERSION = 1.1
 
 [DISPLAY]
-DISPLAY = axis
+#DISPLAY = axis
+DISPLAY =  gscreen -c tester -d -v
 #DISPLAY = touchy
 #DISPLAY = tklinuxcnc
 EDITOR = gedit
@@ -25,7 +26,7 @@ MAX_LINEAR_VELOCITY = 20.00
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 PROGRAM_PREFIX = /home/john/linuxcnc/nc_files
-INCREMENTS = 5mm 1mm .5mm .1mm .05mm .01mm .005mm
+INCREMENTS = 5mm,1mm,.5mm,.1mm,.05mm,.01mm,.005mm
 
 [KINS]
 JOINTS = 3
